--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_include_tag "application"%>
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
         integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -26,13 +26,11 @@
   </head>
 
   <body>
-  
+
    <header class="bg-gray-800" x-data="{ isOpen: false }">
         <nav class="container px-6 py-4 mx-auto md:flex md:justify-between md:items-center">
             <div class="flex items-center justify-between">
-                <a class="text-xl font-bold text-white transition-colors duration-300 transform md:text-2xl hover:text-indigo-400"
-                    href="#">ICCD</a>
-
+              <%= link_to(image_tag("Logo_ICCD_RGB_600_.jpg", style: 'width:128px;'), root_url) %>
                 <!-- Mobile menu button -->
                 <div @click="isOpen = !isOpen" class="flex md:hidden">
                     <button type="button" class="text-gray-200 hover:text-gray-400 focus:outline-none focus:text-gray-400"
@@ -60,6 +58,8 @@
             </div>
         </nav>
 
+
+
         <section id="jumbotron" class="flex items-center justify-center" style="height: 500px;">
             <div class="text-center">
                 <p class="text-xl font-medium tracking-wider text-gray-300">Polifonia Project</p>
@@ -68,52 +68,18 @@
 
 
                 <div class="flex justify-center mt-8">
-                    <a id="explore" class="px-8 py-2 text-lg font-medium text-white transition-colors duration-300 transform bg-indigo-600 rounded hover:bg-indigo-500" 
-                        href="#" >Explore the map </a>
+                    <a id="explore" class="px-8 py-2 text-lg font-medium text-white transition-colors duration-300 transform bg-indigo-600 rounded hover:bg-indigo-500"
+                        href="javascript:void(0);" >Explore the map </a>
                 </div>
             </div>
+
         </section>
+        <div class="w-full" id="mapContainer" class="flex items-center justify-center" x-show="open" style="opacity: 0;"></div>
+
     </header>
 
       <%= yield %>
 
-  
+
   </body>
 </html>
-
-
-<script>
-    const jumbotron = document.getElementById('jumbotron');
-    const box = document.getElementById('explore');
-    explore.addEventListener('click', () => {
-    fade(jumbotron);
-});
-
-    function fade(element) {
-    var op = 1;  // initial opacity
-    var timer = setInterval(function () {
-        if (op <= 0.1){
-            clearInterval(timer);
-            // element.style.display = 'none';
-            unfade(jumbotron);
-        }
-        element.style.opacity = op;
-        element.style.filter = 'alpha(opacity=' + op * 100 + ")";
-        op -= op * 0.1;
-    }, 50);
-}
-
-function unfade(element) {
-    var op = 0.1;  // initial opacity
-    // element.style.display = 'block';
-    var timer = setInterval(function () {
-        if (op >= 1){
-            clearInterval(timer);
-        }
-        element.style.opacity = op;
-        element.style.filter = 'alpha(opacity=' + op * 100 + ")";
-        op += op * 0.1;
-    }, 50);
-}
-
-</script>
